--- a/conda/torchani_cudf/meta.yaml
+++ b/conda/torchani_cudf/meta.yaml
@@ -42,7 +42,7 @@ build:
   string: py{{py}}_torch1.9.1_cuda11.1
   script:
     - pip install torch==1.9.1+cu111 torchvision==0.10.1+cu111 -f https://download.pytorch.org/whl/torch_stable.html
-    - "{{ PYTHON }} setup.py install --ext-all-sms"
+    - "{{ PYTHON }} -m pip install . --global-option='--ext-all-sms' -vvv --no-deps"
 
 test:
   imports:
