--- a/conda/torchani/meta.yaml
+++ b/conda/torchani/meta.yaml
@@ -31,7 +31,7 @@ requirements:
     - requests
     - h5py
     - defaults::numpy >=1.18
-    - torchvision
+    - torchvision >=0.10
     {{ environ.get('CONDA_PYTORCH_CONSTRAINT') }}
     {{ environ.get('CONDA_CUDATOOLKIT_CONSTRAINT') }}
 
