--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -9,27 +9,24 @@ on:
 jobs:
   mypy:
 
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
       matrix:
         python-version: [3.8]
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        ci/install_dependencies.sh
         pip install --upgrade mypy
         pip install types-PyYAML types-pkg_resources types-requests  # mypy library stubs
-    - name: Pytorch info
-      run: python -c 'from torch.utils.collect_env import get_pretty_env_info; print(get_pretty_env_info())'
     - name: Type checking with mypy
-      run: mypy --ignore-missing-imports .
+      run: mypy --ignore-missing-imports --exclude examples/ .
 
 concurrency:
   group: mypy-${{ github.event.pull_request.number || github.sha }}
