--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -31,14 +31,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use saved pkgs
-      run: |
-        if [ -d /root/conda_pkgs_dir_saved ]; then
-          mv /root/conda_pkgs_dir_saved /root/conda_pkgs_dir
-        fi
-    - name: Set up conda path prefix
-      run: |
-        echo "CONDA=/root/miniconda" >> $GITHUB_ENV
+    # - name: Use saved pkgs
+    #   run: |
+    #     if [ -d /root/conda_pkgs_dir_saved ]; then
+    #       mv /root/conda_pkgs_dir_saved /root/conda_pkgs_dir
+    #     fi
+    # - name: Set up conda path prefix
+    #   run: |
+    #     echo "CONDA=/root/miniconda" >> $GITHUB_ENV
     - name: Set up conda
       uses: conda-incubator/setup-miniconda@v2
       with:
@@ -51,12 +51,12 @@ jobs:
       run: conda info
     - name: Fetch submodules
       run: git submodule update --init
-    - name: Install cuda
-      run: |
-        source ci/install_cuda.sh
-        echo "CUDA_HOME=${CUDA_HOME}" >> $GITHUB_ENV
-        echo "LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}" >> $GITHUB_ENV
-        echo "PATH=${CUDA_HOME}/bin:$PATH" >> $GITHUB_ENV
+    # - name: Install cuda
+    #   run: |
+    #     source ci/install_cuda.sh
+    #     echo "CUDA_HOME=${CUDA_HOME}" >> $GITHUB_ENV
+    #     echo "LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}" >> $GITHUB_ENV
+    #     echo "PATH=${CUDA_HOME}/bin:$PATH" >> $GITHUB_ENV
     - name: Conda Build
       run: |
         echo $CUDA_HOME
@@ -65,12 +65,12 @@ jobs:
         export PYTHON_VERSION=${{ matrix.python-version }}
         export CONDA_TOKEN=${{ secrets.CONDA_TOKEN }}
         ./conda/build_conda.sh
-    - name: Save pkgs to avoid to be removed
-      # Waiting feature to be added: https://github.com/conda-incubator/setup-miniconda/issues/181
-      run: mv /root/conda_pkgs_dir /root/conda_pkgs_dir_saved
-    - name: Remove conda env
-      if: ${{ always() }}
-      run: conda env remove --name foo${{ matrix.python-version }}
+    # - name: Save pkgs to avoid to be removed
+    #   # Waiting feature to be added: https://github.com/conda-incubator/setup-miniconda/issues/181
+    #   run: mv /root/conda_pkgs_dir /root/conda_pkgs_dir_saved
+    # - name: Remove conda env
+    #   if: ${{ always() }}
+    #   run: conda env remove --name foo${{ matrix.python-version }}
 
 concurrency:
   group: conda-build-${{ github.event.pull_request.number || github.sha }}
