--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -1,4 +1,4 @@
-name: conda-build
+name: build_conda
 
 on:
   pull_request:
@@ -20,41 +20,31 @@ on:
       - 'conda/**'
       - 'test/test_cuaev.py'
 
-jobs:
-  conda-build:
 
+jobs:
+  build_conda:
     runs-on: self-hosted
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.8]
+    permissions:
+      contents: read
+      packages: write
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up conda
-      uses: conda-incubator/setup-miniconda@v2
-      with:
-        miniconda-version: "latest"
-        activate-environment: foo${{ matrix.python-version }}
-        auto-update-conda: false
-        python-version: ${{ matrix.python-version }}
-    - name: Set up conda path prefix
-      run: |
-        echo "CONDA=$(conda info --base)" >> $GITHUB_ENV
-    - name: Conda info
-      shell: bash -l {0}
-      run: conda info
-    - name: Fetch submodules
-      run: git submodule update --init
-    - name: Conda Build
-      run: |
-        echo $CUDA_HOME
-        echo $LD_LIBRARY_PATH
-        nvcc -V
-        export PYTHON_VERSION=${{ matrix.python-version }}
-        export CONDA_TOKEN=${{ secrets.CONDA_TOKEN }}
-        ./conda/build_conda.sh
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PAT }}
+          submodules: recursive
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: UnitTests
+        run: docker run --gpus all ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}_conda:latest bash -c "nvidia-smi && export PYTHON_VERSION=3.8 && export CONDA_TOKEN=${{ secrets.CONDA_TOKEN }} && ./conda/build_conda.sh"
 
 concurrency:
-  group: conda-build-${{ github.event.pull_request.number || github.sha }}
+  group: build_conda-${{ github.event.pull_request.number || github.sha }}
   cancel-in-progress: true
