--- a/Dockerfile.conda
+++ b/Dockerfile.conda
@@ -11,7 +11,7 @@ SHELL ["/bin/bash", "-cu"]
 # Copy files into container
 COPY . /torchani_sandbox
 
-# Install modulus and dependencies
+# Install torchani and dependencies
 RUN cd /torchani_sandbox \
     && ./conda/build_conda.sh
 
