Make implicit optional true to avoid verbosity

--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -26,7 +26,7 @@ jobs:
         pip install --upgrade mypy
         pip install types-PyYAML types-pkg_resources types-requests  # mypy library stubs
     - name: Type checking with mypy
-      run: mypy --ignore-missing-imports --exclude examples/ .
+      run: mypy --ignore-missing-imports --implicit-optional --exclude examples/ .
 
 concurrency:
   group: mypy-${{ github.event.pull_request.number || github.sha }}
