--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,5 @@ exclude =
 [mypy]
 ignore_missing_imports=True
 no_implicit_optional=False
+check_untyped_defs=True
+exclude = (tests/.*|tools/.*|torchani/neurochem/.*|torchani/data/.*|torchani/infer.py|examples/.*)
