--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -8,6 +8,7 @@ on:
       - 'torchani/aev/**'
       - 'ci/**'
       - 'test/test_cuaev.py'
+      - Dockerfile*
   push:
     branches:
       - master
@@ -17,6 +18,7 @@ on:
       - 'torchani/aev/**'
       - 'ci/**'
       - 'test/test_cuaev.py'
+      - Dockerfile*
 
 env:
   REGISTRY: ghcr.io
