--- a/environment.yaml
+++ b/environment.yaml
@@ -6,7 +6,7 @@ channels:
   - https://conda.anaconda.org/nvidia
 dependencies:
   # general
-  - python >=3.9
+  - python=3.8.1
   - pip
 
   # linters / checkers / tests / CI
@@ -34,9 +34,9 @@ dependencies:
 
   # DL
   - numpy
-  - pytorch=1.13
+  - pytorch=1.13.1
   - torchvision=0.14
-  - cudatoolkit=11.7
+  - cudatoolkit=11.6
   - tensorboard
 
   # progress bars
