--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,9 @@ exclude =
     build,
     .eggs,
     docs/examples
+# dump_dispersion constants only has data, its not necessary to lint it
+per-file-ignores=
+    tools/dump_dispersion_constants.py:E231
 
 [mypy]
 ignore_missing_imports=True
