Omit the file for faster flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,15 +6,14 @@ cover-package=torchani
 
 [flake8]
 ignore = E501, W503, E127, E128
+# dump_dispersion constants only has data, its not necessary to lint it
 exclude =
     .git,
     __pycache__,
     build,
     .eggs,
     docs/examples
-# dump_dispersion constants only has data, its not necessary to lint it
-per-file-ignores=
-    tools/dump_dispersion_constants.py:E231
+    tools/dump_dispersion_constants.py
 
 [mypy]
 ignore_missing_imports=True
