--- a/torchani/datasets/builtin-datasets.yaml
+++ b/torchani/datasets/builtin-datasets.yaml
@@ -256,3 +256,19 @@ ANICCScan:
                 - "ANI-ccscan-Uwb97x-631gd.h5"
     default-lot:
         "uwb97x-631gd"
+DielsAlder:
+    lot:
+        uwb97x-631gd:
+            archive:
+                "DielsAlder-Uwb97x-631gd.tar.gz"
+            files:
+                - "DielsAlder-0001-Uwb97x-631gd.h5"
+                - "DielsAlder-0002-Uwb97x-631gd.h5"
+                - "DielsAlder-0003-Uwb97x-631gd.h5"
+                - "DielsAlder-0004-Uwb97x-631gd.h5"
+                - "DielsAlder-0005-Uwb97x-631gd.h5"
+                - "DielsAlder-0006-Uwb97x-631gd.h5"
+                - "DielsAlder-0007_irc_pes_and_nms_qbc-Uwb97x-631gd.h5"
+                - "DielsAlder-0008_md_qbc_and_aniirc_pes-Uwb97x-631gd.h5"
+    default-lot:
+        "uwb97x-631gd"
