--- a/torchani/datasets/builtin-datasets.yaml
+++ b/torchani/datasets/builtin-datasets.yaml
@@ -243,9 +243,9 @@ COMP6v2:
     default-lot:
         "wb97x-631gd"
 SN2:
-  default-lot: "dsd_blyp_d3bj-def2tzvp"
+  default-lot: dsd_blyp_d3bj-def2tzvp
   lot:
     dsd_blyp_d3bj-def2tzvp:
-      archive: "SN2-dsd_blyp_d3bj-def2tzvp.tar.gz"
+      archive: SN2-dsd_blyp_d3bj-def2tzvp.tar.gz
       files:
-      - "SN2-c_h_f_cl_br_i-dsd_blyp_d3bj-def2tzvp.h5"
+      - SN2-h_c_f_cl_br_i-dsd_blyp_d3bj-def2tzvp.h5
