--- a/conda/torchani/meta.yaml
+++ b/conda/torchani/meta.yaml
@@ -29,6 +29,7 @@ requirements:
     - requests
     - h5py
     - defaults::numpy >=1.18
+    - pyyaml
     {{ environ.get('CONDA_PYTORCH_CONSTRAINT') }}
     {{ environ.get('CONDA_CUDATOOLKIT_CONSTRAINT') }}
 
