completed bare bones trainer. Code will train a network. Still need clean up

--- a/torchani/trainer/complex.ini
+++ b/torchani/trainer/complex.ini
@@ -33,8 +33,8 @@ weight_decay = [6.1E-5, None, None, None]				# List corresponding to weigh decay
 lr_factor = 0.7								# ReduceLROnPlateau factor
 lr_patience = 14							# ReduceLROnPlateau patience
 lr_threshold = 0.0006							# ReduceLROnPlateau threshold
-max_epochs = 2000							# Max number of epochs until termination
-early_stopping_learning_rate = 1.0E-7					# Learning rate to terminate training
+max_num_epochs = 2000							# Max number of epochs until termination
+early_stop_learning_rate = 1.0E-7					# Learning rate to terminate training
 loss_beta = 1								# Default is 1. This is applied to charge loss
 mtl_loss = False							# True if using MTL Loss
 restarting = False							# True if restarting training from existing pt file
