--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ with-coverage=1
 cover-package=torchani
 
 [flake8]
-ignore = E501, W503, E127, E128, E203
+ignore = E501, W503, E203
 # dump_dispersion constants only has data, its not necessary to lint it
 exclude =
     .git,
