Fix flake8 config

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,9 @@ with-coverage=1
 cover-package=torchani
 
 [flake8]
+# E203 is not PEP8 compliant for slices
+# W503 is now best practice
+# E501 is max-line-length, we don't care about that for now
 ignore = E501, W503, E203
 # dump_dispersion constants only has data, its not necessary to lint it
 exclude =
