--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,7 +16,7 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.8]
-        tag: ["build", "push"]
+        tag: ["build"]
 
     steps:
     - uses: actions/checkout@v3
