Remove pkbar requirement

--- a/conda/torchani/meta.yaml
+++ b/conda/torchani/meta.yaml
@@ -49,7 +49,7 @@ test:
     - download.sh
     - dataset/*
   commands:
-    - pip install pytest pynvml pkbar ase parameterized expecttest
+    - pip install pytest pynvml ase parameterized expecttest
     - ./download.sh
     # cuaev test
     - python tests/test_cuaev.py
