Type check neurochem

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,4 +19,4 @@ exclude =
 ignore_missing_imports=True
 no_implicit_optional=False
 check_untyped_defs=True
-exclude = (tests/.*|tools/.*|torchani/neurochem/.*|torchani/data/.*|torchani/infer.py|examples/.*)
+exclude = (tests/.*|tools/.*|torchani/data/.*|torchani/infer.py|examples/.*)
