Fix some stuff... break some other stuff

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,4 +18,4 @@ exclude =
 [mypy]
 ignore_missing_imports=True
 check_untyped_defs=True
-exclude = (tests/.*|tools/.*|torchani/data/.*|torchani/infer.py|examples/.*)
+exclude = (tests/.*|tools/.*|torchani/data/.*|examples/.*)
