Fix mypy workflow

--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -26,10 +26,7 @@ jobs:
         pip install --upgrade mypy
         pip install types-PyYAML types-requests  # mypy library stubs
     - name: Type checking with mypy
-      # infer.py is too dynamic to check. data/ is legacy.
-      # tests/ could be checked,
-      # but to type them correctly is time consuming
-      run: mypy --ignore-missing-imports --check-untyped-defs --implicit-optional --exclude tests/ --exclude examples/ .
+      run: mypy .
 
 concurrency:
   group: mypy-${{ github.event.pull_request.number || github.sha }}
