--- a/setup.cfg
+++ b/setup.cfg
@@ -14,8 +14,9 @@ exclude =
     .eggs,
     docs/examples
     tools/dump_dispersion_constants.py
+max-line-length = 88
 
 [mypy]
-ignore_missing_imports=True
-check_untyped_defs=True
+ignore_missing_imports = True
+check_untyped_defs = True
 exclude = (tests/.*|tools/.*|torchani/data/.*|examples/.*)
