Remove other flake8 ignores

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,9 @@ with-coverage=1
 cover-package=torchani
 
 [flake8]
-ignore = W503, E127, E128
+# W503 is line-break-before-binary-operator which is recommended to be
+# the exact opposite of what flake8 enforces
+ignore = W503
 # dump_dispersion constants only has data, its not necessary to lint it
 exclude =
     .git,
