Reformat setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,8 +5,8 @@ with-coverage=1
 cover-package=torchani
 
 [flake8]
-# W503 is line-break-before-binary-operator which is recommended to be
-# the exact opposite of what flake8 enforces
+# W503 is line-break-before-binary-operator which in PEP8 is the exact opposite
+# of what flake8 enforces
 ignore = W503
 # dump_dispersion constants only has data, its not necessary to lint it
 exclude =
