Avoid distutils warnings in pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,9 @@ detailed-errors=1
 with-coverage=1
 cover-package=torchani
 
+[tool:pytest]
+filterwarnings =
+    ignore:.*distutils Version classes are deprecated.*:DeprecationWarning
 [flake8]
 # W503 is line-break-before-binary-operator which in PEP8 is the exact opposite
 # of what flake8 enforces
