--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -9,8 +9,9 @@ on:
 jobs:
   unittests-cpu:
     runs-on: self-hosted
-    container: pytorch/pytorch:1.13.1-cuda11.6-cudnn8-devel
-    options: --gpus '"device=none"'
+    container:
+      image: pytorch/pytorch:1.13.1-cuda11.6-cudnn8-devel
+      options: --rm --gpus '"device=none"'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
