--- a/.github/workflows/conda-release.yml
+++ b/.github/workflows/conda-release.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   conda-release:
-    runs-on: self-hosted
+    runs-on: [self-hosted, richard]
     permissions:
       contents: read
       packages: write
