--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -26,7 +26,7 @@ env:
 
 jobs:
   build_conda:
-    runs-on: self-hosted
+    runs-on: [self-hosted, richard]
     permissions:
       contents: read
       packages: write
