--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   docs:
 
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, richard]
     strategy:
       max-parallel: 4
       matrix:
