--- a/.github/workflows/build-conda-docker.yml
+++ b/.github/workflows/build-conda-docker.yml
@@ -32,7 +32,7 @@ jobs:
       packages: write
 
     steps:
-      - name: Checkout repository
+      - name: Checkout torchani
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.PAT }}
