--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,17 +16,23 @@ jobs:
         python-version: [3.8]
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout torchnai
+      uses: actions/checkout@v3
+        token: ${{ secrets.PAT }}
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+
     - name: Install dependencies
       run: ci/install_stable_dependencies.sh
+
     - name: Install TorchANI
       run: python setup.py install
+
     - name: Download data files
       run: ./download.sh
-    # build docs
-    - name: Build documents
+
+    - name: Build docs
       run: sphinx-build docs build
