--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: [self-hosted, ipickering]
 
     steps:
-      - name: Checkout repository
+      - name: Checkout torchani
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.PAT }}
